--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
@@ -5,10 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:HeThongPhongMachTu.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d" 
              DataContext="{StaticResource KhamBenh_ChoKhamVM}"
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding DisablePKMoiButtonCommand}"
+                        CommandParameter="{Binding ElementName=buttonPhieuKhamMoi}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <UserControl.Resources>
         <Style TargetType="Image">
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
@@ -91,7 +98,7 @@
                     </ComboBox>-->
 
                     <Border BorderBrush="Gray" BorderThickness="1">
-                        <ListView ItemsSource="{Binding ListbenhNhans, UpdateSourceTrigger=PropertyChanged}"
+                        <ListView ItemsSource="{Binding ListbenhNhans, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
                                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="listViewDSChoKham" 
                               HorizontalContentAlignment="Center">
                             <ListView.Resources>
@@ -99,6 +106,12 @@
                                     <Setter Property="HorizontalContentAlignment" Value="Center" />
                                 </Style>
                             </ListView.Resources>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseUp">
+                                    <i:InvokeCommandAction Command="{Binding EnablePKMoiButtonCommand}"
+                                                               CommandParameter="{Binding ElementName=buttonPhieuKhamMoi}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn Header="STT" Width="60" DisplayMemberBinding="{Binding STT}" />
@@ -121,7 +134,8 @@
         <Grid Grid.Row="1" Background="#6A6868" Margin="0">
             <DockPanel LastChildFill="False" HorizontalAlignment="Center">
 
-                <Button Name="buttonPhieuKhamMoi"
+                <dxwui:NavigationButton Name="buttonPhieuKhamMoi"
+                                        NavigateTo="ucKhamBenh_PhieuKhamMoi"
                     Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
@@ -142,7 +156,7 @@
                         </Grid>
                     </Grid>
 
-                </Button>
+                </dxwui:NavigationButton>
 
                 <Button Name="buttonXemBenhAn"
                     Background="Transparent" BorderThickness="0"
